<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_standard"
            android:icon="@drawable/ic_standard_foreground"
            android:title="@string/menu_Standard" />
        <item
            android:id="@+id/nav_scientific"
            android:icon="@drawable/ic_science_foreground"
            android:title="@string/menu_Scientific" />
        <item
            android:id="@+id/nav_programmer"
            android:icon="@drawable/ic_dev_foreground"
            android:title="@string/menu_Programmer" />
        <item
            android:id="@+id/nav_bill"
            android:icon="@drawable/ic_graphs_foreground"
            android:title="@string/menu_Bill" />
        <item
            android:id="@+id/nav_date"
            android:icon="@drawable/ic_calendar_foreground"
            android:title="@string/menu_Date" />

    </group>

</menu>