<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_standard">

    <fragment
        android:id="@+id/nav_standard"
        android:name="com.example.calculator.ui.standard.StandardFragment"
        android:label="@string/menu_Standard"
        tools:layout="@layout/fragment_standard" />

    <fragment
        android:id="@+id/nav_programmer"
        android:name="com.example.calculator.ui.programmer.ProgrammerFragment"
        android:label="@string/menu_Programmer"
        tools:layout="@layout/fragment_programmer" />

    <fragment
        android:id="@+id/nav_scientific"
        android:name="com.example.calculator.ui.scientific.ScientificFragment"
        android:label="@string/menu_Scientific"
        tools:layout="@layout/fragment_scientific" />

    <fragment
        android:id="@+id/nav_bill"
        android:name="com.example.calculator.ui.bill.BillFragment"
        android:label="@string/menu_Bill"
        tools:layout="@layout/fragment_bill" />

</navigation>